--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.example.admin.music">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:usesCleartextTraffic="true"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/MainTheme"
+            android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
-
         <activity
                 android:name=".launch.LaunchActivity"
                 android:theme="@style/StartTheme">
@@ -23,11 +24,19 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity"
-                  android:theme="@style/MainTheme"/>
-        <activity android:name=".main.MainActivity"
-                  android:theme="@style/MainTheme"/>
+        <activity
+                android:name=".login.LoginActivity"
+                android:theme="@style/MainTheme"/>
+        <activity
+                android:name=".main.MainActivity"
+                android:theme="@style/MainTheme"/>
         <activity android:name=".playlist.PlaylistActivity"/>
+
+        <service
+                android:name=".service.SongService"
+                android:enabled="true"
+                android:exported="false">
+        </service>
     </application>
 
 </manifest>
