Use object to implement singleton, upgrade gradle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".playlist.PlaylistActivity"/>
 
         <service
-                android:name=".service.SongService"
+                android:name=".playback.SongService"
                 android:enabled="true"
                 android:exported="false">
         </service>
